# QT_CMake_MSVC

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Note.md  README.md
src/: APPMain.cpp  HelloWidget.cpp  HelloWidget.h  TheMain.cpp
src/ui/: untitled.ui
tools/: compile_ui.py
